Thu Dec  7 23:31:40 UTC 2000
sms:
+ initial version

+: added
-: removed
*: fixed
!: changed
