@@ -1,3 +1,9 @@
+Fri Dec  8 02:01:40 UTC 2000
+sms:
+* fixed name of areaname variable
++ filelist type dirList
+! file read errors are displayed
+
 Thu Dec  7 23:31:40 UTC 2000
 sms:
 + initial version
